accents de la police Cattedrale - coquille

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -17,7 +17,7 @@
       "eminence": "Feuille d'Éminence grise",
       "pouvoir": "Feuille de Pouvoir",
       "atout": "Feuille d'Atout",
-      "maitrise": "Feuille de Maîitrise magique",
+      "maitrise": "Feuille de Maîtrise magique",
       "adversaire": "Feuille d'Adversaire",
       "action": "Feuille d'Action",
       "intrigue": "Feuille d'Intrigue"
