--- a/lang/fr.json
+++ b/lang/fr.json
@@ -441,8 +441,8 @@
       "resultSuccess": "C’est réussi !",
       "resultEchec": "Le nombre de succès n’est pas suffisant (raté de {x})",
       "resultEchecTooltip": "3 options <br> - Réussite mitigée <br> - Prolongation <br> - Échec",
-      "relanceConscience": "Relance (Conscience)",
-      "relanceReserve": "Relance (Réserve)"
+      "relanceConscience": "Relance (conscience)",
+      "relanceReserve": "Relance (réserve)"
     },
     "Roll": {
       "fausseNote": "Fausse note",
