--- a/lang/fr.json
+++ b/lang/fr.json
@@ -483,16 +483,15 @@
       "support": "Support",
       "discordLaFonderie": "Discord de la Fonderie",
       "discordLaFonderieTooltip": "Rejoignez le serveur francophone dédié à Foundry VTT",
-
       "discordAetherLabs": "Discord d’Æther Labs",
       "discordAetherLabsTooltip": "Rejoignez le serveur d’Æther Labs",
-
       "ressourcesAetherLabs": "Ressources pour Pénombre",
       "ressourcesAetherLabsTooltip": "Rejoignez le site d’Æther Labs",
-
       "menu": "Système",
       "reserve": "Réserve collégiale",
-      "reserveTooltip": "Ouvre la Réserve collégiale"
+      "reserveTooltip": "Ouvre la Réserve collégiale",
+      "bugReport": "Signaler un bug",
+      "bugReportTooltip": "Signaler un bug ou faire une suggestion d’amélioration sur GitHub"
     }
   }
 }
