--- a/lang/fr.json
+++ b/lang/fr.json
@@ -491,7 +491,9 @@
       "reserve": "Réserve collégiale",
       "reserveTooltip": "Ouvre la Réserve collégiale",
       "bugReport": "Signaler un bug",
-      "bugReportTooltip": "Signaler un bug ou faire une suggestion d’amélioration sur GitHub"
+      "bugReportTooltip": "Signaler un bug ou faire une suggestion d’amélioration sur GitHub",
+      "video": "Présentation par Carter",
+      "videoTooltip": "Lancer la présentation vidéo YouTube de Carter"
     }
   }
 }
