--- a/lang/fr.json
+++ b/lang/fr.json
@@ -474,6 +474,10 @@
       "nbJetons": {
         "name": "Nombre de jetons de la Réserve Collégiale",
         "hint": "Nombre maximum de jetons disponibles dans la Réserve Collégiale."
+      },
+      "desSpeciaux": {
+        "name": "Utiliser les dés virtuels Pénombre",
+        "hint": "Utiliser les dés virtuels spéciaux pour Pénombre dans le module Dice-so-Nice (si activé)."
       }
     },
     "ReserveCollegiale": {
