Dés personnalisés avec option textures fournies

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -478,6 +478,10 @@
       "desSpeciaux": {
         "name": "Activer les dés virtuels Pénombre",
         "hint": "Utiliser les dés virtuels spéciaux pour Pénombre depuis le module Dice So Nice! (si activé)."
+      },
+      "desSpeciauxTexture": {
+        "name": "Activer les textures des dés virtuels Pénombre",
+        "hint": "Utiliser les textures des dés virtuels spéciaux pour Pénombre depuis le module Dice So Nice! (si activé)."
       }
     },
     "ReserveCollegiale": {
